--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ footer {
 
 
 
+/* maaf masih berantakan responsivenya :( */
 @media screen and (max-width: 430px) {
   /* Navbar */
   .navbar {
