--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .navbar {
-  padding: 10px 5vw;
+  padding: 0.625rem 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,7 +35,7 @@ body {
   color: black;
   font-weight: bold;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 .navbar-menu {
@@ -46,13 +46,13 @@ body {
 }
 
 .navbar-menu li {
-  margin-right: 20px;
+  margin-right: 1.25rem;
 }
 
 .navbar-menu li a {
   color: black;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .navbar-menu li a:hover {
@@ -60,8 +60,8 @@ body {
 }
 
 .home-container {
-  padding-right: 5vw;
-  padding-left: 5vw;
+  padding-right: 6rem;
+  padding-left: 6rem;
   display: flex;
   flex-direction: column;
 }
@@ -69,10 +69,10 @@ body {
 .title-container {
   width: auto;
   color: white;
-  margin-top: 30px;
+  margin-top: 1.875rem;
   text-align: start;
   display: flex;
-  padding-left: 30px;
+  padding-left: 1.875rem;
   flex-direction: column;
   justify-content: center;
   position: absolute;
@@ -86,15 +86,15 @@ body {
 
 .homeContent-container {
   display: flex;
-  gap: 5vw;
+  gap: 6rem;
   justify-content: space-between;
 }
 
 .contactUs-container {
   background-color: white;
-  padding: 24px 35px;
+  padding: 1.5rem 2.188rem;
   width: 20%;
-  border-radius: 30px;
+  border-radius: 1.875rem;
   position: absolute;
   right: 7vw;
   transform: translateY(55%);
@@ -109,7 +109,7 @@ body {
 }
 .slider-img {
   width: 100%;
-  border-radius: 50px;
+  border-radius: 3.125rem;
 }
 
 @keyframes fade {
@@ -124,24 +124,24 @@ body {
 .form-container {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .form-container input {
-  padding: 10px;
-  margin-bottom: 20px;
+  padding: 0.625rem;
+  margin-bottom: 1.25rem;
   border: 2px solid black;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   box-shadow: 3px 3px 0px 1px rgba(0, 0, 0, 1);
   -webkit-box-shadow: 3px 3px 0px 1px rgba(0, 0, 0, 1);
   -moz-box-shadow: 3px 3px 0px 1px rgba(0, 0, 0, 1);
 }
 
 .form-container select {
-  padding: 10px;
-  margin-bottom: 40px;
+  padding: 0.625rem;
+  margin-bottom: 2.5rem;
   border: 2px solid black;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   box-shadow: 3px 3px 0px 1px rgba(0, 0, 0, 1);
   -webkit-box-shadow: 3px 3px 0px 1px rgba(0, 0, 0, 1);
   -moz-box-shadow: 3px 3px 0px 1px rgba(0, 0, 0, 1);
@@ -149,7 +149,7 @@ body {
 
 .btn {
   width: 100%;
-  height: 60px;
+  height: 3.75rem;
   font-size: 1.1em;
   cursor: pointer;
   background-color: #171717;
@@ -161,21 +161,21 @@ body {
 
 .btn:hover {
   border-radius: 5px;
-  transform: translateY(-10px);
+  transform: translateY(-0.625rem);
   box-shadow: 0 7px 0 -2px #f85959, 0 15px 0 -4px #39a2db,
-    0 16px 10px -3px #39a2db;
+    0 16px 0.625rem -3px #39a2db;
 }
 
 .btn:active {
   transition: all 0.2s;
   transform: translateY(-5px);
   box-shadow: 0 2px 0 -2px #f85959, 0 8px 0 -4px #39a2db,
-    0 12px 10px -3px #39a2db;
+    0 12px 0.625rem -3px #39a2db;
 }
 
 .underHome-container {
   display: flex;
-  margin-top: 10px;
+  margin-top: 0.625rem;
   justify-content: space-between;
 }
 
@@ -184,9 +184,9 @@ body {
   /* min-width: 20%; */
   color: #171717;
   background-color: white;
-  padding: 20px 20px;
-  border-radius: 30px;
-  margin-bottom: 20px;
+  padding: 1.25rem 1.25rem;
+  border-radius: 1.875rem;
+  margin-bottom: 1.25rem;
   border: 2px solid black;
   box-shadow: 8px 8px 0px 0px rgba(0, 0, 0, 1);
   -webkit-box-shadow: 8px 8px 0px 0px rgba(0, 0, 0, 1);
@@ -194,7 +194,7 @@ body {
 }
 
 .testimoni-container img {
-  margin-right: 20px;
+  margin-right: 1.25rem;
   opacity: 0.4;
 }
 
@@ -215,40 +215,40 @@ body {
   text-align: justify;
   display: flex;
   justify-content: space-between;
-  gap: 10px;
-  margin-bottom: 10px;
+  gap: 0.625rem;
+  margin-bottom: 0.625rem;
 }
 
 .underHome2-container img {
   width: 100%;
   max-width: 70%;
-  border-radius: 40px;
+  border-radius: 2.5rem;
 }
 
 .promo-container {
   color: black;
   background-color: #eeeeee;
-  padding: 40px;
-  border-radius: 40px;
+  padding: 2.5rem;
+  border-radius: 2.5rem;
 }
 
 .promo-container ul {
-  margin-top: 10px;
+  margin-top: 0.625rem;
   text-align: justify;
   /* list-style-type: none; */
-  padding-left: 20px;
+  padding-left: 1.25rem;
 }
 
 .package-container {
-  padding-right: 5vw;
-  padding-left: 5vw;
+  padding-right: 6rem;
+  padding-left: 6rem;
   display: flex;
   flex-direction: column;
 }
 
 .title-package {
   background-color: #171717;
-  border-radius: 30px;
+  border-radius: 1.875rem;
   color: white;
   font-size: x-large;
   display: flex;
@@ -256,17 +256,17 @@ body {
   justify-content: center;
   align-items: center;
   height: 20vh;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .package {
   display: flex;
-  gap: 10px;
-  margin-bottom: 10px;
+  gap: 0.625rem;
+  margin-bottom: 0.625rem;
 }
 
 .satu-package {
-  padding: 10px;
+  padding: 0.625rem;
   background-color: #eeeeee;
   display: flex;
   width: 100%;
@@ -274,9 +274,9 @@ body {
 }
 
 .package img {
-  border-radius: 20px;
+  border-radius: 1.25rem;
   max-width: 50%;
-  padding-right: 10px;
+  padding-right: 0.625rem;
 }
 
 .package-desc {
@@ -289,11 +289,11 @@ body {
 }
 
 .call-container {
-  padding: 30px;
-  margin: 0 5vw;
+  padding: 1.875rem;
+  margin: 0 6rem;
   border: 2px solid black;
-  border-radius: 20px;
-  margin-bottom: 20px;
+  border-radius: 1.25rem;
+  margin-bottom: 1.25rem;
   box-shadow: 8px 8px 0px 0px rgba(0, 0, 0, 1);
   -webkit-box-shadow: 8px 8px 0px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 8px 8px 0px 0px rgba(0, 0, 0, 1);
@@ -303,22 +303,22 @@ body {
   align-items: center;
 }
 
-.call-container p{
+.call-container p {
   margin-top: 5px;
   font-size: large;
   max-width: 60%;
   text-align: center;
-  margin: 20px;
+  margin: 1.25rem;
 }
 
-.call-btn{
+.call-btn {
   max-width: 30%;
 }
 
 footer {
-  margin-right: 5vw;
-  margin-left: 5vw;
-  padding: 10px 30px;
+  margin-right: 6rem;
+  margin-left: 6rem;
+  padding: 0.625rem 1.875rem;
   display: flex;
   background-color: #171717;
   color: white;
@@ -329,34 +329,31 @@ footer {
 
 .footer-content {
   display: flex;
-  gap: 10px;
+  gap: 0.625rem;
 }
 
-
-
 /* maaf masih berantakan responsivenya :( */
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 41.875rem) {
   /* Navbar */
   .navbar {
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
+    flex-direction: row;
+    padding: 0.625rem;
   }
 
   .navbar-menu {
-    margin-top: 10px;
+    margin-top: 0;
   }
 
   .navbar-menu li {
-    margin-right: 0;
-    margin-bottom: 10px;
+    margin-right: 1.25rem;
+    margin-bottom: 0;
   }
 
   /* Contact Form */
   .contactUs-container {
     width: 90%;
     padding: 15px;
-    margin: 20px auto;
+    margin: 1.25rem auto;
   }
 
   .form-container input,
@@ -367,13 +364,12 @@ footer {
 
   .form-container button {
     font-size: 16px;
-    height: 50px;
+    height: 3.125rem;
   }
 
   /* Testimonial and Package Sections */
   .underHome-container,
   .underHome2-container {
-    flex-direction: column;
     align-items: center;
   }
 
@@ -384,7 +380,7 @@ footer {
     width: 90%;
     max-width: 100%;
     padding: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
   .testimoni-container h5,
@@ -396,35 +392,35 @@ footer {
   .underHome2-container img {
     width: 90%;
     max-width: 100%;
-    border-radius: 20px;
+    border-radius: 1.25rem;
   }
 
   /* Call to Action Section */
   .call-container {
-    padding: 20px;
-    margin: 20px auto;
+    padding: 1.25rem;
+    margin: 1.25rem auto;
     text-align: center;
   }
 
   .call-container p {
     font-size: 14px;
-    margin: 10px 0;
+    margin: 0.625rem 0;
   }
 
   .call-btn {
     max-width: 50%;
     font-size: 16px;
-    height: 50px;
+    height: 3.125rem;
   }
 
   /* Footer */
   footer {
-    flex-direction: column;
+    flex-direction: row;
     text-align: center;
-    padding: 10px;
+    padding: 0.625rem;
   }
 
   .footer-content {
-    margin-top: 10px;
+    margin-top: 0;
   }
 }
